yaml/nginx/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-prefix-virtualservice02
  namespace: kong
spec:
  gateways:
  - nginx-prefix-gateway
  hosts:
  - '*'
  http:
    - match:
      - uri:
          prefix: "/nginx01"
      rewrite:
        uri: "/"
      route:
      - destination:
          host: svc-nginx.kong.svc.cluster.local
          port:
            number: 8080
    - match:
      - uri:
          prefix: "/nginx02"
      rewrite:
        uri: "/"
      route:
      - destination:
          host: svc-nginx02.kong.svc.cluster.local
          port:
            number: 8000
